<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">,</string>
    <string name="delete">delete</string>
    <string name="backspace">backspase</string>
    <string name="key_percentage">%</string>
    <string name="key_division">/</string>
    <string name="key_multiplication">x</string>
    <string name="key_addition">+</string>
    <string name="key_subtraction">-</string>
    <string name="key_result">=</string>
    <string name="key_ac">AC</string>
    <string name="results">Results</string>
    <string name="input">Input</string>
    <string name="key_del">c</string>
    <string name="switch_theme">switch theme</string>
</resources>