<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:src="@drawable/ic_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <GridLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="4"
            android:layout_gravity="center"
            android:layout_margin="@dimen/main_margin">

                <TextView
                    android:id="@+id/view_result"
                    style="@style/view"
                    android:layout_columnSpan="4"
                    android:layout_rowSpan="2"
                    android:layout_gravity="fill"/>

                <TextView
                    android:id="@+id/view_input"
                    style="@style/view"
                    android:layout_columnSpan="4"
                    android:layout_rowSpan="2"
                    android:layout_gravity="fill_horizontal"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_ac"
                    style="@style/calc_button"
                    android:backgroundTint="@color/action_button"
                    android:text="@string/key_ac"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_del"
                    style="@style/calc_button"
                    android:backgroundTint="@color/action_button"
                    app:icon="@drawable/ic_baseline_backspace_24"
                    app:iconSize="@dimen/main_text"
                    app:iconGravity="textStart"
                    app:iconPadding="@dimen/iconPadding"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_percentage"
                    style="@style/calc_button"
                    android:text="@string/key_percentage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_division"
                    style="@style/calc_button"
                    android:text="@string/key_division" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_1"
                    style="@style/calc_button"
                    android:text="@string/key_1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_2"
                    style="@style/calc_button"
                    android:text="@string/key_2" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_3"
                    style="@style/calc_button"
                    android:text="@string/key_3" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_multiplication"
                    style="@style/calc_button"
                    android:text="@string/key_multiplication" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_4"
                    style="@style/calc_button"
                    android:text="@string/key_4" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_5"
                    style="@style/calc_button"
                    android:text="@string/key_5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_6"
                    style="@style/calc_button"
                    android:text="@string/key_6" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_subtraction"
                    style="@style/calc_button"
                    android:text="@string/key_subtraction"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_7"
                    style="@style/calc_button"
                    android:text="@string/key_7" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_8"
                    style="@style/calc_button"
                    android:text="@string/key_8" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_9"
                    style="@style/calc_button"
                    android:text="@string/key_9" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_addition"
                    style="@style/calc_button"
                    android:text="@string/key_addition"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_dot"
                    style="@style/calc_button"
                    android:text="@string/key_dot" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_0"
                    style="@style/calc_button"
                    android:text="@string/key_0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/key_result"
                    style="@style/calc_button"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:backgroundTint="@color/action_button"
                    android:text="@string/key_result"/>

            </GridLayout>

</FrameLayout>
